FIX: sealed => enum
ちょっと軽量にする
